syntax = "proto3";

package GRPCServer;

option go_package = ".";

import "google/protobuf/empty.proto";

service ProjectService {
  rpc CreateDefaultProject(CreateDefaultProjectRequest) returns (CreateDefaultProjectResponse);
  rpc DeleteProject(DeleteProjectRequest) returns (google.protobuf.Empty);
}

message CreateDefaultProjectRequest {
  string customer_uuid = 1;
}

message CreateDefaultProjectResponse {
  string project_uuid = 1;
}

message DeleteProjectRequest {
  string project_uuid = 1;
}

